# seahorse

./: .gitignore  LICENSE  Makefile  README.md  create_python_env.sh  pyproject.toml  setup.py
notebooks/: attention_viz.ipynb  train.ipynb
seahorse/config/: configuration_seahorse.py  experiment_config.py
seahorse/data/: collator.py  data_utils.py  dataset.py  dataset_construction.py  dataset_registry.py  sampling.py  utils.py
seahorse/data/data_prep/: cv_bench.py  llava_pretrain_cc3m.py  llava_v1_5_mix665k_ift.py  the_cauldron.py
seahorse/data/data_prep/eval/: cv_bench.py  pope.py
seahorse/eval/: eval.py  eval_callback.py  eval_utils.py  lmms_eval_wrapper.py  lmms_runner.py
seahorse/eval/benchmarks/: cv_bench.py  pope.py
seahorse/experiments/: experiment_registry.py  experiment_utils.py  optuna_callback.py  run_experiment.py  utils.py
seahorse/models/: construction.py  seahorse.py  vision_encoder.py
seahorse/train/: efficiency_callback.py  seahorse_trainer.py  train.py
seahorse/utils/: profiling.py  rng.py
tests/: conftest.py  test_collator.py  test_data_prep.py  test_eval.py  test_seahorse.py  test_vision_encoder.py
