[project]
name = "seahorse"
version = "0.1.0"
description = "A small VLLM for research"
authors = [
    { name = "Tyler Romero", email = "tyler.alexander.romero@gmail.com" }
]
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "bitsandbytes~=0.43",
    "datasets~=2.16",
    "devtools>=0.12.2",
    "numpy~=1.26",
    "optuna~=3.6",
    "pandas>=2.2.2",
    "peft~=0.11",
    "pillow~=10.4",
    "pydantic~=2.8",
    "schedulefree>=1.2.6",
    "scikit-learn~=1.5",
    "scipy~=1.14",
    "timm~=1.0",
    "torch==2.3.0",
    "torchvision~=0.18.0",
    "transformers~=4.39",
    "triton~=2.3.0",
    "wandb>=0.17.4",
    "flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.6.3/flash_attn-2.6.3+cu123torch2.3cxx11abiFALSE-cp311-cp311-linux_x86_64.whl",
    "lmms-eval @ git+https://github.com/EvolvingLMMs-Lab/lmms-eval.git@22ed307",
]

[tool.uv]
dev-dependencies = [
    "matplotlib~=3.8",
    "notebook >=7.0",
    "pytest >=7.4",
]
override-dependencies = [
    "transformers~=4.42",  # override unneeded constraint from lmms-eval
]

[tool.setuptools]
packages = ["seahorse"]
